# smr-machine

./: .dockerignore  .gitignore  BENCHMARK_GUIDE.md  CMakeLists.txt  Dockerfile  Makefile  README.md  STEPGUIDE.md  USAGE.md  WALKTHROUGH.md  dune  dune-project  flame.md  smr.opam  smr_machine_visualization.ipynb  test_parse.lua  test_tail.lua
.github/workflows/: Mjölnir.yml  ci.yml
cpp/include/: smr_machine_event_io.hpp  spsc_ring.hpp
cpp/src/: command_stress.cpp  generate_scenario.cpp  spsc_bench.cpp
cpp/tests/: spsc_tests.cpp
docs/: artifact_reference.md  bench_results.md  design.md  github_project_description.txt  profiling.md  submission_notes.md
examples/: generated_from_cpp.pr42  loss_scenario.pr42
ocaml/lib/: deterministic.ml  deterministic.mli  dune
ocaml/test/: deterministic_test.ml  dune
scripts/: bench_matrix.sh  bootstrap_deps.sh  create_colab_nb.py  deterministic_cli.sh  integration_check.sh  lua_json.lua  order_terminal.lua  order_terminal.py  perf_report.sh  plot_stress_metrics.py  profile_bench.bt  profile_bench.sh  run_trading_stress.lua  run_trading_stress.py  stress_report.sh  trading_terminal_tmux.sh
