opam-version: "2.0"
synopsis: "SMR machine deterministic replay and transport tools"
description: "C++ transport and OCaml deterministic replay tooling for smr-machine."
maintainer: ["spass"]
authors: ["spass"]
license: "MIT"
depends: [
  "ocaml" {>= "5.2.0"}
  "dune" {>= "3.20"}
]
build: [
  ["dune" "build" "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-j" jobs]
]
